Fix displaying settings on small screens

--- a/css/settings.css
+++ b/css/settings.css
@@ -12,7 +12,7 @@
 
 	display:         flex;
 	flex-direction:  column;
-	justify-content: center;
+/*	justify-content: center;*/
 	align-items:     center;
 
 	overflow: auto;
@@ -27,7 +27,6 @@
 
 	scrollbar-width:         thin;
 	scrollbar-color:         var(--dark_purple) var(--gray);
-	scrollbar-margin-bottom: 10px;
 }
 
 .S-title {
